# bitter

./: .gitignore  Cargo.toml  README.md  build.sh  install.sh
docs/: architecture_assessment.md  plan.md  roadmap.md  storage_refactored.md
src/: agent.rs  api.rs  cli.rs  commands.rs  config.rs  crypto.rs  daemon.rs  main.rs  storage.rs  tui.rs
