[package]
name = "sshwarden"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.9.1"
aes-gcm = "0.11.0"
argon2 = "0.5.3"
base64 = "0.22.1"
cbc = { version = "0.2.1", features = ["block-padding"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
daemonize = "0.5.0"
directories = "6.0.0"
futures-util = { version = "0.3.32", features = ["sink"] }
hex = "0.4.3"
libc = "0.2.186"
reqwest = { version = "0.13.4", features = ["form", "json"] }
ring = "0.17.14"
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ssh-encoding = "0.2"
ssh-key = { version = "0.6.7", features = ["crypto", "rsa", "ed25519", "p256"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.4", features = ["v4"] }
